# ray-tracing

./: Cargo.toml  README.md
examples/: big_scene.json  generate_random_scene.py  simple_scenes.json
src/: main.rs
src/containers/: mod.rs  tests.rs  vec3.rs
src/data/: hit.rs  mod.rs  ray.rs  tests.rs  vec3.rs
src/img/: encoder.rs  encoders.rs  image.rs  img_format.rs  mod.rs  png_image.rs
src/json/: load.rs  mod.rs  specs.rs
src/world/: camera.rs  config.rs  mod.rs  scene.rs
src/world/elements/: element.rs  element_list.rs  mod.rs  sphere.rs
src/world/materials/: glass.rs  lambertian.rs  material.rs  metal.rs  mod.rs
