[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = {version = "0.15.0", features = ["rayon"]}
overload = "0.1.1"
png = "0.16.8"
rand = "0.8.1"
rayon = "1.5.0"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.61"